# fdupves

./: .gitignore  CMakeLists.txt  NEWS  README.md
fingerprint/: fingerprint.cpp  fingerprint.h
po/: fdupves.po
src/: CMakeLists.txt  audio.c  audio.h  cache.c  cache.h  ebook.c  ebook.h  ebook_epub.c  ebook_pdf.c  find.c  find.h  gui.c  gui.h  hash.c  hash.h  image-win.c  image-win.h  image.c  image.h  ini.c  ini.h  main.c  phash.c  test_audio.c  test_mod.c  util.c  util.h  video.c  video.h
